--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,5 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Check Go version
-        run: go version
+      - name: Run go tests
+        run: go test ./...
