--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,3 +20,5 @@ jobs:
         
       - name: Build
         run: ./scripts/buildprod.sh
+      - name: Deploy
+        run: gcloud builds submit --tag REGION-docker.pkg.dev/notely-464905/notely-ar-repo/notely:latest .
