--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Build
         run: ./scripts/buildprod.sh
       - name: Deploy
-        run: gcloud builds submit --tag REGION-docker.pkg.dev/notely-464905/notely-ar-repo/notely:latest .
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-464905/notely-ar-repo/notely:latest .
