--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,9 @@ jobs:
   Deploy:
     name: Deploy
     runs-on: ubuntu-latest
-
+     # This part
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - name: Check out code
         uses: actions/checkout@v4      
@@ -18,6 +20,8 @@ jobs:
         with:
           go-version: "1.23.0"
 
+      - name: install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
           
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
