--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,8 +36,10 @@ jobs:
 
       - name: Build
         run: ./scripts/buildprod.sh
+      - name: Migrate
+        run: ./scripts/migrateup.sh 
       - name: Deploy
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-464905/notely-ar-repo/notely:latest .
-
+        
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-464905/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-464905 --max-instances=4
